# haiku-judge-evals

./: .gitignore  README.md  RESULTS.md  pyproject.toml
data/: haikus_to_judge.jsonl
prompts/: judge_pairwise_prepair_v1.txt  judge_pairwise_v1.txt  judge_pointwise_v1.txt
results/frontier-judged/: bradley_terry.csv  pairs.csv  position_bias.csv  position_consistency.csv  self_bias.csv  summary.json  syllable_accuracy.csv  win_rates.csv
src/: ingest.py  inspect_eval.py  report.py  schema.py  syllables_util.py
