[project]
name = "haiku-judge-evals"
version = "0.1.0"
description = "Blind LLM-judge eval measuring self-preference bias when models rate haikus (including their own)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0",
    "syllables>=1.0.7",
    "inspect-ai>=0.3.0",
]

[project.scripts]
ingest-haikus = "src.ingest:main"
report-judge-eval = "src.report:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
